--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,18 +1,16 @@
-import = [
-    "~/.config/alacritty/themes/catppuccin/catppuccin-mocha.toml"
-]
+[font]
+size = 12.0
 
-[env]
-TERM = "xterm-256color"
+[font.normal]
+family = "FiraCode Nerdfont"
+style = "Regular"
 
 [window]
-padding.x=10
-padding.y=10
-decorations="transparent"
-opacity=0.8
-blur=true
-option_as_alt="both"
+opacity = 0.8
 
-[font]
-normal.family = "FiraCode Nerd Font"
-size = 11
+[window.padding]
+x = 15
+y = 15
+
+[selection]
+save_to_clipboard = true
