--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,17 +1,39 @@
 print_info() {
-    info "👤" title
-    prin "$(color 7)┌───────────────────────────────┐"
-    prin ""
-    info "💻" distro
-    info "🐚" shell
-    info "🚀" term
-    info "🕖" uptime
-    info "📦" packages
-    info "🌎" public_ip
-    info "🏠" local_ip
-    prin ""
-    prin "$(color 6)Hello World!"
-    prin ""
-    prin "$(color 7)└───────────────────────────────┘"
-    prin " \n \n $(color 1) \n \n $(color 2) \n \n $(color 3) \n \n $(color 4)  \n \n $(color 5)  \n \n $(color 6)  \n \n $(color 7)  \n \n $(color 0)"
+    info title
+    info underline
+
+    info "$(color 7)󰣇 OS" distro
+    info "$(color 15)├$(color 5) Kernel" kernel
+    info "$(color 15)├$(color 5) Uptime" uptime
+    info "$(color 15)└$(color 5) Packages" packages
+
+    prin
+
+    info "$(color 7) PC" model
+    info "$(color 15)├$(color 6) CPU" cpu
+    info "$(color 15)├$(color 6) Memory" memory
+    info "$(color 15)├$(color 6) GPU" gpu
+    info "$(color 15)└$(color 6) Resolution" resolution
+
+    prin
+
+    info "$(color 15) WM" de
+    prin "$(color 15)├$(color 2) Bar" "Waybar"
+    prin "$(color 15)└$(color 2) Compositor" "Wayland"
+
+    prin
+
+    info "$(color 15) TTY" term
+    info "$(color 15)└$(color 3) Shell" shell
 }
+
+kernel_shorthand="off"
+os_arch="off"
+uptime_shorthand="tiny"
+memory_percent="on"
+package_managers="on"
+shell_version="off"
+speed_shorthand="on"
+separator=" ➜"
+ascii_colors=(distro)
+ascii_bold="on"
