--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -85,11 +85,11 @@ bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod SHIFT, SPACE, togglefloating
 bind = $mainMod, F, fullscreen
 bind = $mainMod, X, killactive
+bind = $mainMod, M, exit
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, R, exec, wofi --show drun
-bind = $mainMod, M, exit
 bind = $mainMod, W, exec, killall -9 waybar && waybar
-bind = $mainMod, B, exec, firefox
+bind = $mainMod, B, exec, flatpak run com.google.Chrome
 bind = $mainMod, E, exec, nautilus
 
 bind = $mainMod, left, movefocus, l
