--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,8 @@
+source=~/.config/hypr/mocha.conf
+
 monitor = ,preferred,auto,1
 
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & swaync
 
 env = XCURSOR_SIZE,18
 env = HYPRCURSOR_SIZE,18
@@ -18,22 +20,20 @@ input {
         natural_scroll = true
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0
 }
 
 general {
     gaps_in = 5
     gaps_out = 20
-    border_size = 2
-    col.active_border = $color11 rgba(59595900) $color14 45deg
-    col.inactive_border = rgba(59595900)
+    border_size = 3
+    col.active_border = $blue $mauve 45deg
+    col.inactive_border = $surface0
 
     layout = dwindle
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 10
 
     drop_shadow = yes
@@ -49,7 +49,7 @@ decoration {
         enabled = true
         size = 10
         passes = 3
-        ignore_opacity = true
+        ignore_opacity = trues
         new_optimizations = true
     }
 }
@@ -82,15 +82,27 @@ misc {
 $mainMod = SUPER
 
 bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod SHIFT, SPACE, togglefloating
-bind = $mainMod, F, fullscreen
-bind = $mainMod, X, killactive
-bind = $mainMod, M, exit
-bind = $mainMod, Q, exec, kitty
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, E, exec, nautilus
 bind = $mainMod, W, exec, killall -9 waybar && waybar
 bind = $mainMod, B, exec, flatpak run com.google.Chrome
-bind = $mainMod, E, exec, nautilus
+
+bind = $mainMod, SPACE, exec, rofi -show drun
+bind = $mainMod, F1, exec, ~/.dotfiles/.config/rofi/scripts/network.sh
+bind = $mainMod, F2, exec, ~/.dotfiles/.config/rofi/scripts/emoji.sh
+bind = $mainMod, F3, exec, ~/.dotfiles/.config/rofi/scripts/tmux.sh
+bind = $mainMod, F4, exec, ~/.dotfiles/.config/rofi/scripts/bluetooth.sh
+
+bind = $mainMod, N, exec, swaync-client -t
+bind = $mainMod shift, N, exec, swaync-client -rs
+bind = $mainMod alt, N, exec, swaync-client --reload-config
+
+bind = $mainMod shift, F11, fullscreen
+bind = $mainMod, X, killactive
+bind = $mainMod, Q, exit
+
+bind = $mainMod, PRINT, exec, hyprshot -m window
+bind = $mainMod SHIFT, PRINT, exec, hyprshot -m region
+bind = $mainMod, Escape, exec, hyprlock
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
