replaced fastfetch by neofetch and adjusted neofetch config

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -17,9 +17,7 @@ print_info() {
 
     prin
 
-    info "$(color 15) WM" de
-    prin "$(color 15)├$(color 2) Bar" "Waybar"
-    prin "$(color 15)└$(color 2) Compositor" "Wayland"
+    info "$(color 15) WM/DE" de
 
     prin
 
