--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -102,6 +102,7 @@ bind = $mainMod, Q, exit
 
 bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = $mainMod SHIFT, PRINT, exec, hyprshot -m region
+bind = $mainMod alt, PRINT, exec, hyprshot -m output
 bind = $mainMod, Escape, exec, hyprlock
 
 bind = $mainMod, left, movefocus, l
