New Neovim config w/ custom NVChad

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@ source=~/.config/hypr/mocha.conf
 
 monitor = ,preferred,auto,1
 
-exec-once = waybar & hyprpaper & swaync
+exec-once = waybar & hyprpaper & swaync & swayosd-server
 
 env = XCURSOR_SIZE,18
 env = HYPRCURSOR_SIZE,18
@@ -35,11 +35,6 @@ general {
 
 decoration {
     rounding = 10
-
-    drop_shadow = yes
-    shadow_range = 5
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 
     active_opacity = 0.7
     inactive_opacity = 0.7
@@ -152,14 +147,16 @@ bindm = $mainMod, mouse:273, resizewindow
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && swayosd-client --output-volume lower
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && swayosd-client --output-volume mute-toggle
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle && swayosd-client --input-volume mute-toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+ && swayosd-client --brightness raise
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%- && swayosd-client --brightness lower
+bindel = ,Caps_Lock, exec, swayosd-client --caps-lock
+bindel = ,Caps_Lock, exec, swayosd-client --caps-lock-led input19::capslock
 
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = ,XF86AudioNext, exec, playerctl next
+bindl = ,XF86AudioPause, exec, playerctl play-pause
+bindl = ,XF86AudioPlay, exec, playerctl play-pause
+bindl = ,XF86AudioPrev, exec, playerctl previous
